--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -199,7 +199,7 @@ aug2023:
   - name: Commutative Algebra	
     code: MA 312	
     instructor: Radhika Ganapathy
-    timing: 'Mon, Wed, Fri: 8:30 - 10:00'
+    timing: 'Tue, Thu: 8:30 - 10:00'
     venue: LH-4
   - code: MA 313
     instructor: Mahesh Kakde
