--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -652,7 +652,7 @@ jan2022:
     webpage: http://www.math.iisc.ac.in/~ssil/Courses/Analysis_3_Spring22/PDE2Spring22.html
   - name: Topics in Harmonic Analysis II
     code: MA 322
-    instructor: Thangavelu
+    instructor: S. Thangavelu
     timing: 'Mon, Wed, Fri: 10:00 - 11:00'
     venue: LH-5
   - name: Topics in Complex Analysis
@@ -786,7 +786,7 @@ aug2021:
     timing: 'Tue, Thu: 11:30 - 1:00'
   - name: Topics in Harmonic Analysis
     code: MA 304
-    instructor: Thangavelu
+    instructor: S. Thangavelu
     timing: 'Mon, Wed, Fri: 10:00 - 11:00'
   - name: Commutative Algebra
     code: MA 312
@@ -1626,7 +1626,7 @@ aug2018:
     prereq-courses: MA 231
     ug-prereq-courses: ''
   - name: Probability Theory
-    instructor: Srikanth K. Iyer
+    instructor: Srikanth Iyer
     timing: 'Tue, Thu: 11:00-12:30'
     code: MA 361
     prereq-courses: MA 222
@@ -1873,7 +1873,7 @@ aug2016:
     prereq-courses: ''
     ug-prereq-courses: ''
   - name: Probability Theory
-    instructor: Srikanth K. Iyer
+    instructor: Srikanth Iyer
     code: MA 361
     prereq-courses: MA 222
     ug-prereq-courses: ''
@@ -1956,7 +1956,7 @@ aug2017:
     prereq-courses: ''
     ug-prereq-courses: ''
   - name: Probability Theory
-    instructor: Srikanth K. Iyer
+    instructor: Srikanth Iyer
     code: MA 361
     prereq-courses: MA 222
     ug-prereq-courses: ''
