--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -209,8 +209,8 @@ aug2023:
   - name: Introduction to Analytic Number Theory
     code: MA 317
     instructor: Soumya Das
-    timing: 'Tue, Thu: 11:30 - 1:00'
-    venue: LH-4
+    timing: 'Mon, Wed, Fri: 11:00 - 12:00'
+    venue: LH-5
   - name: Riemannian Geometry
     code: MA 333
     instructor: Ved Datar
