--- a/_data/phd-alumni.yaml
+++ b/_data/phd-alumni.yaml
@@ -1087,6 +1087,11 @@
   title: On the Kobayashi geometry of domains
   advisor: Gautam Bharali
 
+- name : Hassain M. (IISc Mathematics)
+  year: 2019
+  title: 'Representations of Special Compact Linear Groups of Order Two: Construction, Representation Growth, Group Algebras, and Branching Laws'
+  advisor: Pooja Singla
+
 - name: Pramath A V
   year: 2019
   title: Fourier coefficients of modular forms and mass of pullback of Saito-Kurokawa lifts
@@ -1098,6 +1103,11 @@
   title: Phase transition, percolation at criticality, Poisson convergence of isolated vertices and connectivity in random connection models
   advisor: Srikanth Iyer	
   present: Postdoc (ISI Bangalore) 
+
+- name : Raghavendra Tripathi 
+  year: 2020
+  title: Determinantal processes and stochastic domination
+  advisor: 
 
 - name: Samrat Sen	
   year: 2020	
