Updated Committees' list, Course MA379 and Updated Chairman's photo

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -234,8 +234,8 @@ aug2023:
   - name: Linear Algebraic Groups
     code: MA 379
     instructor: Mihir Sheth
-    timing: 'Mon, Wed, Fri: 8:00 - 9:00'
-    venue: LH-4
+    timing: 'Mon, Wed: 3:00 - 4:30'
+    venue: LH-2
   - name : Topics in Non-linear functional analysis
     code: MA 388
     instructor: Arka Mallick
