--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -43,4 +43,9 @@
   image: true
   webpage: https://sites.google.com/view/vineethchintala/home
 
-
+- name: Kousik Dhara (Ph.D., Indian Institute of Technology, Madras)
+  position: Inspire Fellow
+  research-areas: Banach algebra and operator theory
+  user-id: kousikdhara
+  image: true
+  webpage: https://www.researchgate.net/profile/Kousik-Dhara
