--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -1,18 +1,18 @@
 - name: Safdar Quddus, (Ph.D., Washington University)
-  position: Inspire Fellow
+  position: INSPIRE Faculty Fellow
   research-areas: Non-commutative Geometry
   user-id: safdarquddus
   image: true
   
 - name: Srijan Sarkar, (Ph.D., ISI, Bangalore)
-  position: Inspire Fellow
+  position: INSPIRE Faculty Fellow
   research-areas: Multivariate Operator Theory
   user-id : srijans
   image: true
 
 
 - name: Mithun Bhowmik, (Ph.D., Indian Statistical Institute, Kolkata)
-  position: Inspire Fellow
+  position: INSPIRE Faculty Fellow
   research-areas: Harmonic Analysis on Lie Groups
   user-id : mithunb
   image: true
@@ -25,27 +25,27 @@
 
 
 - name: Shraddha Srivastava, (Ph.D., CMI, Chennai)
-  position: Inspire Fellow
+  position: INSPIRE Faculty Fellow
   research-areas: Representation Theory
   user-id : sshraddha
   image: true  
 
 - name: Biltu Dan (Ph.D., ISI)
-  position: Inspire Fellow
+  position: INSPIRE Faculty Fellow
   research-areas: Probability Theory
   user-id: biltudan
   image: true
 
 - name: Vineeth Chintala (Ph.D., Tata Institute of Fundamental Research, Mumbai)
-  position: Inspire Fellow
+  position: INSPIRE Faculty Fellow
   research-areas: Algebra, Quadratic forms, Behavioural Economics, Market Design
   user-id: vineethc
   image: true
   webpage: https://sites.google.com/view/vineethchintala/home
 
-- name: Kousik Dhara (Ph.D., Indian Institute of Technology, Madras)
-  position: Inspire Fellow
-  research-areas: Banach algebra and operator theory
+- name: Kousik Dhara "(Ph.D., Indian Institute of Technology, Madras)"
+  position: INSPIRE Faculty Fellow
+  research-areas: Functional Analysis and Operator Theory
   user-id: kousikdhara
   image: true
-  webpage: https://www.researchgate.net/profile/Kousik-Dhara
+  webpage: https://sites.google.com/view/kousikdhara
