--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -43,7 +43,7 @@
   image: true
   webpage: https://sites.google.com/view/vineethchintala/home
 
-- name: Kousik Dhara "(Ph.D., Indian Institute of Technology, Madras)"
+- name: Kousik Dhara (Ph.D., Indian Institute of Technology, Madras)
   position: INSPIRE Faculty Fellow
   research-areas: Functional Analysis and Operator Theory
   user-id: kousikdhara
