--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -45,5 +45,7 @@
 
 - name: Kousik Dhara (Ph.D., Indian Institute of Technology, Madras)
   user-id: kousikdhara
+  position: INSPIRE Faculty Fellow
+  research-areas: Functional Analysis and Operator Theory
   image: true
   webpage: https://sites.google.com/view/kousikdhara
