--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -430,4 +430,62 @@
   programme: PhD
   user-id: sudipdolai
   image: true
+- name: Anantha Krishna B
+  year-of-joining: 2023
+  programme: PhD
+  user-id: ananthakb
+  image: true
 
+- name: Archana M P
+  year-of-joining: 2023
+  programme: PhD
+  user-id: archanam
+  image: true
+
+- name: Biplab Das
+  year-of-joining: 2023
+  programme: PhD
+  user-id: biplabdas
+  image: true
+
+- name: Damase Sujit Sakharam
+  year-of-joining: 2023
+  programme: PhD
+  user-id: sujits
+  image: true
+
+- name: Ritul
+  year-of-joining: 2023
+  programme: PhD
+  user-id: ritul2023
+  image: true
+
+- name: Ritvik Saharan
+  year-of-joining: 2023
+  programme: PhD
+  user-id: ritviks
+  image: true
+
+- name: Sayan Adhikari
+  year-of-joining: 2023
+  programme: PhD
+  user-id: sayana
+  image: true
+
+- name: Vyshnav V
+  year-of-joining: 2023
+  programme: PhD
+  user-id: vyshnavv
+  image: true
+
+- name: Rudranil Sahu
+  year-of-joining: 2023
+  programme: Integrated PhD
+  user-id: rudranilsahu
+  image: true
+
+- name: Saham Sil
+  year-of-joining: 2023
+  programme: Integrated PhD
+  user-id: sahamsil
+  image: true
