--- a/_data/staff.yaml
+++ b/_data/staff.yaml
@@ -15,7 +15,7 @@
   office: Room R16
 
 - name: Sodagudi Nitish Kumar
-  user-id: sysadmin
+  user-id: sysadmin.math
   phone: "+91-80 2293 2514"
   office: Room R14
 
