--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -101,6 +101,9 @@ jan2024:
   - name: Stochastic Finance II 
     code: MA 366
     instructor: Srikanth Iyer
+  - name: Algebraic Combinatorics
+    code: MA 319
+    instructor: Arvind Ayyer and Digjoy Paul
 
 
 aug2023:
