--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,39 @@
+- name  : Sushil Singla
+  phd: Shiv Nadar University
+  user-id: 
+  position: Research Associate
+  image: true
+  research-area: Functional analysis, Operator algebras
+  
+- name: Chandan Biswas
+  phd: University of Wisconsin, Madison
+  user-id: chandanbiswa
+  position: Research Associate
+  image: true
+  research-area: Harmonic Analysis
+  
+- name: Rajesh Kumar Singh 
+  phd: IIT Kanpur 
+  user-id: rajeshsingh
+  position: NBHM
+  image: true
+  research-area: Harmonic Analysis
+  
+- name: Shivani Goel
+  phd: IIT Madras
+  user-id: shivanigoel
+  position: NPDF
+  image: true
+  research-area: Linear algebra, Graph theory
+  
+- name: Jyotirmoy Ganguly
+  webpage:
+  phd: IISER Pune
+  user-id: jyotirmoyg
+  position: NBHM
+  image: true
+  research-area: Representation Theory  
+  
 - name: Biltu Dan
   position: Raman PDF
   phd: ISI
