--- a/_data/fac-alumni.yaml
+++ b/_data/fac-alumni.yaml
@@ -45,6 +45,7 @@
   website: https://www.iitk.ac.in/new/pooja-singla
 
 - name: Dilip Patil
+  position: Distinguished Professor, Gitam University Bengaluru
   website: http://www.math.iisc.ernet.in/~patil/
 
 - name: Gadadhar Misra
@@ -59,5 +60,10 @@
   website: https://math.iisc.ac.in/~mkg/
 
 - name: Basudeb Datta
+  position: Honorary Adjunct Professor, IAI TCG CREST
   website: https://math.iisc.ac.in/~dattab/
+
+- name: Amalendu Krishna
+  position: Faculty, University of California Santa Barbara
+  website: https://www.math.ucsb.edu/people/amalendu-krishna
 
