--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -169,7 +169,7 @@
   research-areas: Partial differential equations, variational methods, non-linear functional analysis
   phd: TIFR-CAM
   phone-ext: 3210
-  office: 
+  office: L29
 
 - name: Muna Naik
   user-id: muna
