--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -143,7 +143,7 @@
   webpage:
   phd: IIT Roorkee
   user-id: sumitarora
-  position: NBHM PDF
+  position: IOE
   image: true
   research-area: TBD
 
