Added stu-chandanp.jpg and updated postdocs.yaml

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -134,10 +134,10 @@
 - name: Chandan Pradhan
   webpage:
   phd: IIT Guwahati
-  user-id: chandanpradhan
+  user-id: chandanp
   position: IOE
   image: true
-  research-area: TBD
+  research-area: Operator Theory
   
 - name: Sumit Arora
   webpage:
