--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -132,7 +132,7 @@
   research-area: Algebraic geometry and Representation theory
 
 - name: Chandan Pradhan
-  webpage:
+  webpage: https://sites.google.com/view/chandanpradhan
   phd: IIT Guwahati
   user-id: chandanp
   position: IOE
