--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -145,5 +145,5 @@
   user-id: sumitarora
   position: IOE
   image: true
-  research-area: TBD
+  research-area: Nonlinear Analysis, Control Theory, Controllability and observability of dynamical systems
 
