--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -95,6 +95,9 @@ jan2024:
   - name:  Algebraic Topology	
     code: MA 332	
     instructor: Siddhartha Gadgil
+  - name: Advanced Functional Analysis  
+    code: MA 340	
+    instructor: Chandan Pradhan and Tirthankar Bhattacharyya
   - name:  Topics in Representation theory	
     code: MA 357	
     instructor: Radhika Ganapathy
