--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -68,6 +68,7 @@ jan2024:
   - name: Introduction to Graph Theory
     code: MA 216
     instructor: Vineeth Chintala/ R. Venkatesh
+    webpage: https://sites.google.com/view/vineethchintala/graph-theory
   - name: Number Theory	
     code: MA 218	
     instructor: Soumya Das
