course web page

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -93,6 +93,7 @@ jan2024:
   - name:  Algebraic Topology	
     code: MA 332	
     instructor: Siddhartha Gadgil
+    webpage: https://math.iisc.ac.in/~gadgil/algebraic-topology-2024/index.html
   - name: Advanced Functional Analysis  
     code: MA 340	
     instructor: Chandan Pradhan and Tirthankar Bhattacharyya
