--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -3,7 +3,8 @@
   research-areas: Non-commutative Geometry
   user-id: safdarquddus
   image: true
-  
+  webpage: https://sites.google.com/site/safdarquddus/
+
 - name: Srijan Sarkar, (Ph.D., ISI, Bangalore)
   position: INSPIRE Faculty Fellow
   research-areas: Multivariate Operator Theory
