--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -82,6 +82,7 @@ jan2024:
   - name: Introduction to Homological Algebra
     code: MA 316
     instructor: Safdar Quddus
+    webpage: https://sites.google.com/site/safdarquddus/ma-316
   - name : Analysis 3	
     code: MA 321	
     instructor: E. K. Narayanan
