--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -58,7 +58,7 @@ jan2024:
     code: MA 235 
     prereq-courses: MA 221
     ug-prereq-courses: ''
-    webpage: 
+    webpage: https://math.iisc.ac.in/~vamsipingali/teaching/ma235manifoldsspring2023/ma235.html
   - name: Ordinary Differential Equations
     credits: '3:1'
     instructor: Harish Seshadri
