--- a/_data/staff.yaml
+++ b/_data/staff.yaml
@@ -12,11 +12,11 @@
 - name: Kiran R
   user-id: rkiran
   phone-ext: 2265
-  office: Room R16
+  office: R16
 
 - name: Sodagudi Nitish Kumar
   user-id: sysadmin.math
   phone-ext: 2514
-  office: Room R14
+  office: R14
 
 
