Updated MA319 details

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -114,6 +114,9 @@ jan2024:
   - name: Algebraic Combinatorics
     code: MA 319
     instructor: Arvind Ayyer and Digjoy Paul
+    webpage: https://math.iisc.ac.in/~arvind/ma319/
+    timing: 'Tue, Thu: 2:00 - 3:30'
+    venue: LH-3
 
 
 aug2023:
