--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -178,6 +178,7 @@
   phd: ISI
   phone-ext: 2712
   office: L17
+  website: https://sites.google.com/view/munanaikiisc/home
 
 - name: A. K. Nandakumaran
   user-id: nands
