--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -4647,21 +4647,6 @@
   mrclass: '91A15 (91A23)'
   volume: '39'
 
-- number: '1'
-  author: 'Bandyopadhyay, Pradipta and Li, Yongjin and Lin, Bor-Luh and Narayana, Darapaneni'
-  fjournal: 'Journal of Mathematical Analysis and Applications'
-  url: 'http://dx.doi.org/10.1016/j.jmaa.2007.10.024'
-  pages: '309--317'
-  year: '2008'
-  mrreviewer: 'Marek Be\AA ka'
-  title: 'Proximinality in Banach spaces'
-  doi: '10.1016/j.jmaa.2007.10.024'
-  issn: '0022-247X'
-  journal: 'J. Math. Anal. Appl.'
-  mrnumber: '2394086'
-  mrclass: '46B20 (41A65)'
-  volume: '341'
-
 - number: '3'
   author: 'Maity, Soma'
   fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
@@ -5133,6 +5118,36 @@
   mrnumber: '2074318'
   mrclass: '76W05 (76A20 76U05)'
   volume: '42'
+
+- number: '1'
+  author: 'Dasgupta, Samit and Kakde, Mahesh'
+  fjournal: 'Annals of Mathematics. Second Series'
+  url: 'https://doi.org/10.4007/annals.2023.197.1.5'
+  pages: '289--388'
+  year: '2023'
+  mrreviewer: 'Andreas\ Nickel'
+  title: 'On the Brumer-Stark conjecture'
+  doi: '10.4007/annals.2023.197.1.5'
+  issn: '0003-486X,1939-8980'
+  journal: 'Ann. of Math. (2)'
+  mrnumber: '4513146'
+  mrclass: '11R29 (11F41 11R42)'
+  volume: '197'
+
+- number: '1'
+  author: 'Bandyopadhyay, Pradipta and Li, Yongjin and Lin, Bor-Luh and Narayana, Darapaneni'
+  fjournal: 'Journal of Mathematical Analysis and Applications'
+  url: 'http://dx.doi.org/10.1016/j.jmaa.2007.10.024'
+  pages: '309--317'
+  year: '2008'
+  mrreviewer: 'Marek Be\AA ka'
+  title: 'Proximinality in Banach spaces'
+  doi: '10.1016/j.jmaa.2007.10.024'
+  issn: '0022-247X'
+  journal: 'J. Math. Anal. Appl.'
+  mrnumber: '2394086'
+  mrclass: '46B20 (41A65)'
+  volume: '341'
 
 - number: '5-6'
   author: 'Rangarajan, Govindan and Chen, Yonghong and Ding, Mingzhou'
