--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -4706,6 +4706,18 @@
   mrclass: '65R32 (78A46 78A70 92C99)'
   volume: '26'
 
+- number: '1-2'
+  author: 'Khare, Apoorva'
+  fjournal: 'The Mathematics Student'
+  pages: '127--136'
+  year: '2023'
+  title: 'Polymath 14: groups with norms'
+  issn: '0025-5742'
+  journal: 'Math. Student'
+  mrnumber: '4676918'
+  mrclass: '20-02 (01 20F12 20F65)'
+  volume: '92'
+
 - number: '1'
   author: 'Borkar, Vivek S. and Ghosh, Mrinal K.'
   fjournal: 'Journal of the Indian Institute of Science. A Multidisciplinary Reviews Journal'
@@ -8746,6 +8758,21 @@
   mrnumber: '4379818'
   mrclass: '82C44 (05A15 05A19)'
   volume: '103'
+
+- number: '1-2'
+  author: 'Belton, Alexander and Guillot, Dominique and Khare, Apoorva and Putinar, Mihai'
+  fjournal: 'Acta Universitatis Szegediensis. Acta Scientiarum Mathematicarum'
+  url: 'https://doi.org/10.1007/s44146-022-00023-0'
+  pages: '417--448'
+  year: '2022'
+  mrreviewer: 'Salman\ Ahmadi-Asl'
+  title: 'Matrix compression along isogenic blocks'
+  doi: '10.1007/s44146-022-00023-0'
+  issn: '0001-6969,2064-8316'
+  journal: 'Acta Sci. Math. (Szeged)'
+  mrnumber: '4500511'
+  mrclass: '65F55 (14M15 15A86 47A60 65F45)'
+  volume: '88'
 
 - author: 'Binda, Federico and Krishna, Amalendu'
   fjournal: 'Journal de l''\''Ecole polytechnique. Math\''ematiques'
@@ -12910,6 +12937,20 @@
   mrclass: '47A13 (32A70)'
   volume: '230'
 
+- number: '3'
+  author: 'Khare, Apoorva and Tikaradze, Akaki'
+  fjournal: 'Journal of Algebraic Combinatorics. An International Journal'
+  url: 'https://doi.org/10.1007/s10801-023-01233-7'
+  pages: '761--773'
+  year: '2023'
+  title: 'Recovering affine linearity of functions from their restrictions to affine lines'
+  doi: '10.1007/s10801-023-01233-7'
+  issn: '0925-9899,1572-9192'
+  journal: 'J. Algebraic Combin.'
+  mrnumber: '4654146'
+  mrclass: '15A03 (13C10)'
+  volume: '58'
+
 - number: 'Special Centenary Volume'
   author: 'Thangavelu, S.'
   fjournal: 'The Mathematics Student'
@@ -15489,6 +15530,21 @@
   series: 'Springer Monographs in Mathematics'
   publisher: 'Springer, Cham'
   isbn: '978-3-030-05596-7; 978-3-030-05597-4'
+
+- number: '3'
+  author: 'Khare, Apoorva'
+  fjournal: 'Transactions of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/tran/8563'
+  pages: '2217--2236'
+  year: '2022'
+  mrreviewer: 'Gorazd\ Le\vsnjak'
+  title: 'Smooth entrywise positivity preservers, a Horn-Loewner master theorem, and symmetric function identities'
+  doi: '10.1090/tran/8563'
+  issn: '0002-9947,1088-6850'
+  journal: 'Trans. Amer. Math. Soc.'
+  mrnumber: '4378092'
+  mrclass: '15B48 (05E05 15A24 15A45 26C05 26D10)'
+  volume: '375'
 
 - number: '13'
   author: 'Ramamurthy, Balaji and Bapat, Ravindra B. and Goel, Shivani'
