--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1666,19 +1666,6 @@
   mrclass: '46B28 (46B20)'
   volume: '16'
 
-- author: 'Manna, Ramesh and Shrivastava, Saurabh and Shuin, Kalachand'
-  fjournal: 'Nonlinear Analysis. Theory, Methods \& Applications. An International Multidisciplinary Journal'
-  url: 'https://doi.org/10.1016/j.na.2020.112225'
-  pages: '112225, 24'
-  year: '2021'
-  title: 'Weighted estimates for maximal functions associated with finite type curves in $\Bbb R^2$'
-  doi: '10.1016/j.na.2020.112225'
-  issn: '0362-546X'
-  journal: 'Nonlinear Anal.'
-  mrnumber: '4190639'
-  mrclass: '42B25 (42B15 42B37)'
-  volume: '205'
-
 - number: '2'
   author: 'Nandakumaran, A. K. and Ratnakumar, P. K.'
   fjournal: 'Journal of Functional Analysis'
@@ -1707,6 +1694,33 @@
   mrnumber: '2186679'
   mrclass: '57Q15 (05E25)'
   volume: '305'
+
+- author: 'Manna, Ramesh and Shrivastava, Saurabh and Shuin, Kalachand'
+  fjournal: 'Nonlinear Analysis. Theory, Methods \& Applications. An International Multidisciplinary Journal'
+  url: 'https://doi.org/10.1016/j.na.2020.112225'
+  pages: '112225, 24'
+  year: '2021'
+  title: 'Weighted estimates for maximal functions associated with finite type curves in $\Bbb R^2$'
+  doi: '10.1016/j.na.2020.112225'
+  issn: '0362-546X'
+  journal: 'Nonlinear Anal.'
+  mrnumber: '4190639'
+  mrclass: '42B25 (42B15 42B37)'
+  volume: '205'
+
+- number: '3'
+  author: 'Bhunia, Pintu and Paul, Kallol and Barik, Somdatta'
+  fjournal: 'Operators and Matrices'
+  url: 'https://doi.org/10.7153/oam-2023-17-50'
+  pages: '767-778'
+  year: '2023'
+  title: 'Further refinements of Davis-Wielandt radius inequalities'
+  doi: '10.7153/oam-2023-17-50'
+  issn: '1846-3886,1848-9974'
+  journal: 'Oper. Matrices'
+  mrnumber: '4667172'
+  mrclass: '47A12 (15A60 47A30 47A50)'
+  volume: '17'
 
 - number: '3'
   author: 'Fialowski, Alice and Majumdar, Anita'
@@ -5989,6 +6003,20 @@
   isbn: '0-444-51086-9'
   mrclass: '35R35 (35C15 35R30 80A22)'
   volume: '45'
+
+- number: '3'
+  author: 'Mal, Arpita'
+  fjournal: 'Operators and Matrices'
+  url: 'https://doi.org/10.7153/oam-2023-17-56'
+  pages: '839-856'
+  year: '2023'
+  title: 'On joint numerical radius of operators and joint numerical index of a Banach space'
+  doi: '10.7153/oam-2023-17-56'
+  issn: '1846-3886,1848-9974'
+  journal: 'Oper. Matrices'
+  mrnumber: '4667178'
+  mrclass: '47A12 (46B20 47L05)'
+  volume: '17'
 
 - number: '3'
   author: 'Datta, Basudeb and Maity, Dipendu'
