--- a/_data/emiscient.yaml
+++ b/_data/emiscient.yaml
@@ -8,11 +8,11 @@
   position: NASI Honorary Scientist
   research-areas: Boundary-value problems, integral equations, diffraction theory, numerical methods
   email: alok[at]iisc.ac.in
-  webpage: http://math.iisc.ernet.in/~alok/
+  webpage: https://math.iisc.ac.in/~alok/
   photo: fac-alok2.jpg
 
 - name: Phoolan Prasad
   position: NASI Senior Scientist&ndash;Platinum Jubilee Fellow
   research-areas: Hyperbolic conservation laws, nonlinear waves and shock waves, sonic boom, numerical analysis
-  webpage: http://math.iisc.ernet.in/~prasad/
+  webpage: https://math.iisc.ac.in/~prasad/
   photo: fac-phoolanprasad.jpg
