--- a/_data/fac-alumni.yaml
+++ b/_data/fac-alumni.yaml
@@ -46,7 +46,7 @@
 
 - name: Dilip Patil
   position: Distinguished Professor, Gitam University Bengaluru
-  website: http://www.math.iisc.ernet.in/~patil/
+  website: https://math.iisc.ac.in/~patil/
 
 - name: Gadadhar Misra
   position: "JC Bose National Fellow at ISI Bangalore, and Visiting Professor at IIT Gandhinagar"
