--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -13511,6 +13511,19 @@
   mrclass: '35L67 (65M70 76L05 76M25)'
   volume: '12'
 
+- author: 'Ghosh, Gargi and Narayanan, E. K.'
+  fjournal: 'Bulletin des Sciences Math&eacute;matiques'
+  url: 'https://doi.org/10.1016/j.bulsci.2023.103340'
+  pages: 'Paper No. 103340, 29'
+  year: '2023'
+  title: 'Toeplitz operators on the weighted Bergman spaces of quotient domains'
+  doi: '10.1016/j.bulsci.2023.103340'
+  issn: '0007-4497'
+  journal: 'Bull. Sci. Math.'
+  mrnumber: '4650655'
+  mrclass: '47B35 (30H20 47B32)'
+  volume: '188'
+
 - number: '2'
   author: 'Iyer, Srikanth K. and Manjunath, D.'
   fjournal: 'S\=adhan\=a. Academy Proceedings in Engineering Sciences'
